# shuapiao

./: shua.sh  shuapiao.cabal
app/: Main.hs
